scribble-test/src/test/resources/bad/efsm/grecursion/unfair/Test11c.scr
module bad.efsm.grecursion.unfair.Test11c;


global protocol Proto1(role A, role B, role C)
{
	rec X
	{
		choice at A
		{
			1() from A to B;
			choice at B
			{
				2() from B to A;
			}
			or
			{
				3() from B to A;
				4() from B to C;
			}
			continue X;
		}
	}
}

